--- a/NEWS
+++ b/NEWS
@@ -143,7 +143,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   MakeCatalog crash in upper-limit with full size label (bug #52281).
 
-  NoiseChisel leaving unlabeld regions after clump growth (bug #52327).
+  NoiseChisel leaving unlabeled regions after clump growth (bug #52327).
 
 
 
