--- a/NEWS
+++ b/NEWS
@@ -50,6 +50,12 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   properties of the dataset vary gradually and sampling from the whole
   dataset might produce biased results.
 
+  NoiseChisel: with the new `--convolved' option, NoiseChisel will not
+  convolve the input any more and use the given image. In many cases,
+  convolution is the most time consuming step of NoiseChisel, so with this
+  option, you can greatly speed up your tests (to find the best parameters
+  for a given analysis). See the book for more information and examples.
+
   NoiseChisel: with the new `--widekernel' option it is now possible to use
   a wider kernel to identify which tiles contain signal. The rest of the
   steps (identifying the quantile threshold on the selected tiles and etc)
