NoiseChisel's --convolvedname option back to --convolved
In a previous commit, I had mistakenly assumed that all the file name
options end in `name'. But in NoiseChisel, this was the standard in
`main.h', not the options. We should probably fix this sometime (so the
names in `main.h' and the option names exactly correspond). So with this
commit, the `name' suffix is removed and the option is only called
`--convolved'.

Also, I noticed that the `--log' option is present in NoiseChisel's
`--help' output while NoiseChisel doesn't produce any logs. So in
`bin/noisechisel/ui.c', `--log' is now set to be a hidden option.

--- a/NEWS
+++ b/NEWS
@@ -45,15 +45,16 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   `--geora', `--geodec', `--clumpsra', `--clumpsdec', `--clumpsgeora',
   `--clumpsgeodec'. No alias is currently defined for the latter group.
 
-  MakeCatalog: The new `--uprange' option allows you to specify a range for
+  MakeCatalog: the new `--uprange' option allows you to specify a range for
   the random values around each object. This is useful when the noise
   properties of the dataset vary gradually and sampling from the whole
   dataset might produce biased results.
 
-  NoiseChisel: with the new `--convolved' option, NoiseChisel will not
-  convolve the input any more and use the given image. In many cases,
-  convolution is the most time consuming step of NoiseChisel, so with this
-  option, you can greatly speed up your tests (to find the best parameters
+  NoiseChisel: with the new `--convolved' and `--convolvedhdu' options,
+  NoiseChisel will not convolve the input any more and use the given
+  dataset instead. In many cases, as the inputs get larger, convolution is
+  the most time consuming step of NoiseChisel. With this option, you can
+  greatly speed up your tests (to find the best parameters by varying them,
   for a given analysis). See the book for more information and examples.
 
   NoiseChisel: with the new `--widekernel' option it is now possible to use
