SV decomposition order uses maximum
Until now, the SV decomposition that was used to correct the pixel
resolution (for CDELT) was re-ordered only if there was one non-zero
element. But now, it will use the maximum value to allow usage on more
datasets (that don't necessarily have the same resolution, for example
tilted images).

This follows the previous commit, so Alejandro's name has been added to the
`THANKS' file also.

--- a/THANKS
+++ b/THANKS
@@ -36,6 +36,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Francesco Montanari                  francesco.montanari@openmailbox.org
     William Pence                        William.Pence@nasa.gov
     Yahya Sefidbakht                     y.sefidbakht@gmail.com
+    Alejandro Serrano Borlaff            asborlaff@ucm.es
     Richard Stallman                     rms@gnu.org
     Ole Streicher                        olebole@debian.org
     Ignacio Trujillo                     trujillo@iac.es
